--- a/b.html
+++ b/b.html
@@ -1,6 +1,7 @@
 <html>
   <body>
-    <h1>Software Development</h3>
+    <h1>Software Development</h1>
+    <h3>iteravive model</h3>
     <p> the basic idea in software is developed in increment method and in iteration add new function</p>
   </body>
 </html>
